RESOLVED FIXED135154
Fix unused parameter build warning in UIProcess module
https://bugs.webkit.org/show_bug.cgi?id=135154
Summary Fix unused parameter build warning in UIProcess module
Shivakumar J M
Reported 2014-07-22 02:00:52 PDT
Fix unused parameter build warning, found in WebPageProxy.cpp, during build for efl wk2 port. /home/shiva.jm/webkit-git/svn32bit/WebKit/Source/WebKit2/UIProcess/WebPageProxy.cpp:1127:6: warning: unused parameter dispatchMode [-Wunused-parameter] void WebPageProxy::viewStateDidChange(ViewState::Flags mayHaveChanged, bool wantsReply, ViewStateChangeDispatchMode dispatchMode)
Attachments
patch (1.14 KB, patch)
2014-07-22 02:24 PDT, Shivakumar J M
no flags
Shivakumar J M
Comment 1 2014-07-22 02:24:10 PDT
Created attachment 235279 [details] patch Fix unused parameter build warning in UIProcess module by using UNUSED_PARAM macro.
WebKit Commit Bot
Comment 2 2014-07-22 10:33:00 PDT
Comment on attachment 235279 [details] patch Clearing flags on attachment: 235279 Committed r171346: <http://trac.webkit.org/changeset/171346>
WebKit Commit Bot
Comment 3 2014-07-22 10:33:05 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.