Fix unused parameter build warning in UIProcess module https://bugs.webkit.org/show_bug.cgi?id=135154

Patch by Shivakumar JM <shiva.jm@samsung.com> on 2014-07-22
Reviewed by Alexey Proskuryakov.

Fix unused parameter build warning in UIProcess module by using UNUSED_PARAM macro.

* UIProcess/WebPageProxy.cpp:
(WebKit::WebPageProxy::viewStateDidChange):

Canonical link: https://commits.webkit.org/153061@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@171346 268f45cc-cd09-0410-ab3c-d52691b4dbfc